--- a/config/zones/US-CAR-SCEG.yaml
+++ b/config/zones/US-CAR-SCEG.yaml
@@ -104,6 +104,18 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 6.8
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 10.2
+    - datetime: '2017-06-01'
+      source: EIA.gov
+      value: 25.6
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 54.9
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 198.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 903.2
@@ -131,10 +143,9 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: A third of the nuclear-related electricity production is attributed to
-  the balancing authority South Carolina Public Service Authority (US-CAR-SC) due
-  to an agreement between the two balancing authorities. Read more on the zone definition
-  wiki page.
+disclaimer:
+  A third of the nuclear-related electricity production is attributed to the balancing authority South Carolina Public Service Authority
+  (US-CAR-SC) due to an agreement between the two balancing authorities. Read more on the zone definition wiki page.
 emissionFactors:
   direct:
     battery discharge:
@@ -243,12 +254,10 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 932.0702837
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 968.568923
     gas:
       - datetime: '2020-01-01'
