--- a/config/zones/US-CAL-LDWP.yaml
+++ b/config/zones/US-CAL-LDWP.yaml
@@ -8,6 +8,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
+    - datetime: '2017-10-01'
+      source: EIA.gov
+      value: 2.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 23.5
@@ -107,6 +110,15 @@ capacity:
     - datetime: '2017-04-01'
       source: EIA.gov
       value: 788.3
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 792.8
+    - datetime: '2017-11-01'
+      source: EIA.gov
+      value: 797.5
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 878.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 987.0
