--- a/config/zones/US-CAR-CPLE.yaml
+++ b/config/zones/US-CAR-CPLE.yaml
@@ -65,6 +65,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 5987.9
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 6108.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 6430.8
@@ -103,6 +106,12 @@ capacity:
     - datetime: '2017-04-01'
       source: EIA.gov
       value: 713.0
+    - datetime: '2017-06-01'
+      source: EIA.gov
+      value: 646.2
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 571.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 242.2
@@ -113,6 +122,21 @@ capacity:
     - datetime: '2017-04-01'
       source: EIA.gov
       value: 919.8
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 939.8
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 946.7
+    - datetime: '2017-09-01'
+      source: EIA.gov
+      value: 965.5
+    - datetime: '2017-10-01'
+      source: EIA.gov
+      value: 975.5
+    - datetime: '2017-11-01'
+      source: EIA.gov
+      value: 996.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1595.4
@@ -326,12 +350,10 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1059.9982231
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1143.5715619999999
     gas:
       - datetime: '2020-01-01'
