--- a/config/zones/US-CAR-DUK.yaml
+++ b/config/zones/US-CAR-DUK.yaml
@@ -128,6 +128,18 @@ capacity:
     - datetime: '2017-04-01'
       source: EIA.gov
       value: 1194.3
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 1294.3
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 1304.3
+    - datetime: '2017-09-01'
+      source: EIA.gov
+      value: 1414.7
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 1526.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2200.4
@@ -327,12 +339,10 @@ emissionFactors:
         value: 306.16
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 941.3628778000001
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 863.063492
     gas:
       - datetime: '2020-01-01'
