--- a/config/zones/US-CAR-SC.yaml
+++ b/config/zones/US-CAR-SC.yaml
@@ -56,6 +56,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 2.5
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 42.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 98.2
@@ -89,9 +92,9 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: This zone includes a third of the nuclear related electricity production
-  from the balancing authority South Carolina Electric & Gas Company. Read more on
-  the zone definition wiki page.
+disclaimer:
+  This zone includes a third of the nuclear related electricity production from the balancing authority South Carolina Electric & Gas
+  Company. Read more on the zone definition wiki page.
 emissionFactors:
   direct:
     battery discharge:
@@ -200,12 +203,10 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1165.692392
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1153.7182579999999
     gas:
       - datetime: '2020-01-01'
