--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -95,6 +95,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 30.8
+    - datetime: '2017-06-01'
+      source: EIA.gov
+      value: 32.7
+    - datetime: '2017-11-01'
+      source: EIA.gov
+      value: 41.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 436.5
