--- a/config/zones/US-FLA-GVL.yaml
+++ b/config/zones/US-FLA-GVL.yaml
@@ -23,6 +23,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 370.5
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 377.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 579.4
@@ -185,12 +188,10 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 972.4589745000001
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 941.770753
     gas:
       - datetime: '2020-01-01'
