--- a/config/zones/US-FLA-JEA.yaml
+++ b/config/zones/US-FLA-JEA.yaml
@@ -59,6 +59,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 15.0
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 22.1
+    - datetime: '2017-11-01'
+      source: EIA.gov
+      value: 23.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 35.1
@@ -183,8 +189,7 @@ emissionFactors:
         value: 277.252
     coal:
       datetime: '2012-01-01'
-      source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
+      source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
       value: 880.658933
     gas:
       - datetime: '2020-01-01'
