--- a/config/zones/US-MIDA-PJM.yaml
+++ b/config/zones/US-MIDA-PJM.yaml
@@ -11,6 +11,9 @@ capacity:
     - datetime: '2017-04-01'
       source: EIA.gov
       value: 298.3
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 278.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 252.9
@@ -72,6 +75,12 @@ capacity:
     - datetime: '2017-02-01'
       source: EIA.gov
       value: 2580.4
+    - datetime: '2017-06-01'
+      source: EIA.gov
+      value: 2585.2
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 2579.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2225.5
@@ -145,6 +154,12 @@ capacity:
     - datetime: '2017-02-01'
       source: EIA.gov
       value: 63428.3
+    - datetime: '2017-06-01'
+      source: EIA.gov
+      value: 62775.5
+    - datetime: '2017-10-01'
+      source: EIA.gov
+      value: 62165.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 53128.2
@@ -197,6 +212,18 @@ capacity:
     - datetime: '2017-04-01'
       source: EIA.gov
       value: 80751.9
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 80714.3
+    - datetime: '2017-06-01'
+      source: EIA.gov
+      value: 80054.6
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 81114.6
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 81957.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 95496.7
@@ -349,6 +376,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 6603.8
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 6605.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 5882.4
@@ -419,6 +449,27 @@ capacity:
     - datetime: '2017-04-01'
       source: EIA.gov
       value: 1721.2
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 1724.9
+    - datetime: '2017-06-01'
+      source: EIA.gov
+      value: 1764.8
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 1775.9
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 1781.2
+    - datetime: '2017-09-01'
+      source: EIA.gov
+      value: 1783.7
+    - datetime: '2017-10-01'
+      source: EIA.gov
+      value: 1808.7
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 2200.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 4682.0
@@ -589,6 +640,15 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 7700.7
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 7800.7
+    - datetime: '2017-10-01'
+      source: EIA.gov
+      value: 7805.2
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 8268.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 10207.4
@@ -751,12 +811,10 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1049.3545804
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1056.79065
     gas:
       - datetime: '2020-01-01'
