--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -51,6 +51,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 633.4
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 670.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 750.5
@@ -116,6 +119,15 @@ capacity:
     - datetime: '2017-02-01'
       source: EIA.gov
       value: 887.7
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 898.3
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 998.3
+    - datetime: '2017-10-01'
+      source: EIA.gov
+      value: 1077.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1592.5
@@ -286,12 +298,10 @@ emissionFactors:
         value: 456.18
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1179.761649
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1179.99223
     gas:
       - datetime: '2020-01-01'
