--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -37,6 +37,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 645.4
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 642.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 669.0
@@ -77,7 +80,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
-    - datetime: '2021-01-01'
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 8.0
+    - datetime: '2017-09-01'
       source: EIA.gov
       value: 17.0
     - datetime: '2023-01-01'
@@ -119,9 +125,9 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: This zone includes all electricity production from the generation-only
-  balancing authorities NaturEner Power Watch, LLC and NaturEner Wind Watch, LLC.
-  Read more on the wiki page.
+disclaimer:
+  This zone includes all electricity production from the generation-only balancing authorities NaturEner Power Watch, LLC and NaturEner
+  Wind Watch, LLC. Read more on the wiki page.
 emissionFactors:
   direct:
     battery discharge:
@@ -223,12 +229,10 @@ emissionFactors:
         value: 539.26
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1070.1093959999998
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1037.2593519999998
     gas:
       - datetime: '2020-01-01'
