--- a/config/zones/US-NW-PACE.yaml
+++ b/config/zones/US-NW-PACE.yaml
@@ -12,7 +12,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 16.9
-    - datetime: '2021-01-01'
+    - datetime: '2017-05-01'
       source: EIA.gov
       value: 15.3
     - datetime: '2023-01-01'
@@ -225,9 +225,8 @@ delays:
   consumptionForecast: 30
   production: 48
 disclaimer:
-  This zone includes all gas related electricity production from the generation-only
-  balancing authority Avangrid Renewables, LLC. Read more on the zone definition wiki
-  page.
+  This zone includes all gas related electricity production from the generation-only balancing authority Avangrid Renewables, LLC. Read
+  more on the zone definition wiki page.
 emissionFactors:
   direct:
     battery discharge:
@@ -326,12 +325,10 @@ emissionFactors:
         value: 741.42
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1107.353715
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1097.158105
     gas:
       - datetime: '2020-01-01'
