--- a/config/zones/US-NW-WACM.yaml
+++ b/config/zones/US-NW-WACM.yaml
@@ -119,6 +119,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 72.0
+    - datetime: '2017-08-01'
+      source: EIA.gov
+      value: 75.5
+    - datetime: '2017-10-01'
+      source: EIA.gov
+      value: 77.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 192.2
@@ -187,6 +193,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 311.9
+    - datetime: '2017-05-01'
+      source: EIA.gov
+      value: 301.4
+    - datetime: '2017-12-01'
+      source: EIA.gov
+      value: 376.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 782.3
@@ -319,12 +331,10 @@ emissionFactors:
         value: 645.47
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1125.725068
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 1094.5397600000001
     gas:
       - datetime: '2020-01-01'
